Fix installer schema (#464)
